Get Token from azure ad

--- a/api/Hackathon.Azure.Business/Hackathon.Azure.Business.csproj
+++ b/api/Hackathon.Azure.Business/Hackathon.Azure.Business.csproj
@@ -6,4 +6,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Azure.ResourceManager.Resources" Version="1.0.0" />
+    <PackageReference Include="Microsoft.Azure.Management.Fluent" Version="1.38.1" />
+    <PackageReference Include="Microsoft.Azure.Management.ResourceManager.Fluent" Version="1.38.1" />
+  </ItemGroup>
+
 </Project>
